# python-HashCalc

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
src/hash_calc/: __init__.py  hash_calc.py
tests/: __init__.py  test_cli.py
