[project]
name = "hash-calc"
version = "0.1.0"
description = "A simple CLI application for calculating hashes of files written in Python."
readme = "README.md"
authors = [
    { name = "martin-coding", email = "martin.coding.public@gmail.com" }
]
requires-python = ">=3.12.8"
dependencies = []

[project.scripts]
hash-calc = "hash_calc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.3",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 150

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101", # asserts allowed in tests
    "PLR2004", # magic value comparisions allowed
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "COM812", "ISC001", "T201"]
